@@ -201,14 +201,11 @@ class pts_result_file_output
 
 		return $result_output;
 	}
-	public static function result_file_to_pdf(&$result_file, $dest, $output_name = 'phoronix-test-suite.pdf', $extra_attributes = null)
+	public static function result_file_to_pdf(&$result_file, $dest, $output_name, $extra_attributes = null)
 	{
 		ob_start();
-		$_REQUEST['force_format'] = 'PNG'; // Force to PNG renderer
+		$_REQUEST['force_format'] = 'JPEG'; // Force to PNG renderer
 		$_REQUEST['svg_dom_gd_no_interlacing'] = true; // Otherwise FPDF will fail
-		$tdir = pts_client::create_temporary_directory();
-		pts_client::generate_result_file_graphs($result_file, $tdir, $extra_attributes);
-
 		$pdf = new pts_pdf_template($result_file->get_title(), null);
 
 		$pdf->AddPage();
@@ -234,15 +231,22 @@ class pts_result_file_output
 		}
 
 		$pdf->AddPage();
+
 		$placement = 1;
-		$results = $result_file->get_result_objects();
-		for($i = 1; $i <= count($results); $i++)
+		$i = 0;
+		foreach($result_file->get_result_objects() as $key => &$result_object)
 		{
-			if(is_file($tdir . 'result-graphs/' . $i . '.png'))
+			$graph = pts_render::render_graph_process($result_object, $result_file, false, $extra_attributes);
+			if($graph == false)
 			{
-				$pdf->Ln(100);
-				$pdf->Image($tdir . 'result-graphs/' . $i . '.png', 50, 40 + (($placement - 1) * 120), 120);
+				continue;
 			}
+
+			$graph->renderGraph();
+			$output = $graph->svg_dom->output(null);
+			$pdf->Ln(100);
+			$pdf->ImageJPGInline($output, 50, 40 + (($placement - 1) * 120), 120);
+
 			if($placement == 2)
 			{
 				$placement = 0;
@@ -252,8 +256,8 @@ class pts_result_file_output
 				}
 			}
 			$placement++;
+			$i++;
 		}
-		pts_file_io::delete($tdir, null, true);
 		ob_get_clean();
 		$pdf->Output($dest, $output_name);
 	}
